tests/ui/coverage-attr/bad-syntax.stderr
error: malformed `coverage` attribute input
  --> $DIR/bad-syntax.rs:17:1
   |
LL | #[coverage]
   | ^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   |           +++++
LL | #[coverage(on)]
   |           ++++

error: malformed `coverage` attribute input
  --> $DIR/bad-syntax.rs:20:1
   |
LL | #[coverage = true]
   | ^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL - #[coverage = true]
LL + #[coverage(off)]
   |
LL - #[coverage = true]
LL + #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/bad-syntax.rs:23:1
   |
LL | #[coverage()]
   | ^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   |            +++
LL | #[coverage(on)]
   |            ++

error: malformed `coverage` attribute input
  --> $DIR/bad-syntax.rs:26:1
   |
LL | #[coverage(off, off)]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL - #[coverage(off, off)]
LL + #[coverage(off)]
   |
LL - #[coverage(off, off)]
LL + #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/bad-syntax.rs:29:1
   |
LL | #[coverage(off, on)]
   | ^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL - #[coverage(off, on)]
LL + #[coverage(off)]
   |
LL - #[coverage(off, on)]
LL + #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/bad-syntax.rs:32:1
   |
LL | #[coverage(bogus)]
   | ^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL - #[coverage(bogus)]
LL + #[coverage(off)]
   |
LL - #[coverage(bogus)]
LL + #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/bad-syntax.rs:35:1
   |
LL | #[coverage(bogus, off)]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL - #[coverage(bogus, off)]
LL + #[coverage(off)]
   |
LL - #[coverage(bogus, off)]
LL + #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/bad-syntax.rs:38:1
   |
LL | #[coverage(off, bogus)]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL - #[coverage(off, bogus)]
LL + #[coverage(off)]
   |
LL - #[coverage(off, bogus)]
LL + #[coverage(on)]
   |

error: expected identifier, found `,`
  --> $DIR/bad-syntax.rs:44:12
   |
LL | #[coverage(,off)]
   |            ^ expected identifier
   |
help: remove this comma
   |
LL - #[coverage(,off)]
LL + #[coverage(off)]
   |

error: multiple `coverage` attributes
  --> $DIR/bad-syntax.rs:9:1
   |
LL | #[coverage(off)]
   | ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/bad-syntax.rs:10:1
   |
LL | #[coverage(off)]
   | ^^^^^^^^^^^^^^^^

error: multiple `coverage` attributes
  --> $DIR/bad-syntax.rs:13:1
   |
LL | #[coverage(off)]
   | ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/bad-syntax.rs:14:1
   |
LL | #[coverage(on)]
   | ^^^^^^^^^^^^^^^

error: aborting due to 11 previous errors

